ch18 finished, ch19 REGEX